err/unicore-cms-django.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cms'...
Listing './lib/python3.5/site-packages/cms/management'...
Listing './lib/python3.5/site-packages/cms/management/commands'...
Compiling './lib/python3.5/site-packages/cms/management/commands/import_from_git.py'...
***   File "./lib/python3.5/site-packages/cms/management/commands/import_from_git.py", line 119
    except ValidationError, e:  # pragma: no cover
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cms/management/commands/tests'...
Listing './lib/python3.5/site-packages/cms/migrations'...
Listing './lib/python3.5/site-packages/cms/static'...
Listing './lib/python3.5/site-packages/cms/static/css'...
Listing './lib/python3.5/site-packages/cms/tests'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/project'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unicore'...
Listing './lib/python3.5/site-packages/unicore/content'...
Listing './lib/python3.5/site-packages/unicore_cms_django-1.0.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
